# ElevateCV

./: .gitignore  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/services/: ai_service.py  pdf_parser.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
