[project]
name = "elevate-cv-api"
version = "0.1.0"
description = "AI-powered resume review API using FastAPI and Groq"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pypdf2>=3.0.0",
    "groq>=0.4.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.14.11",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
]
